--- a/index.html
+++ b/index.html
@@ -146,29 +146,23 @@
     </main>
     <div class="bg-[#F7F8F8] mt-16" id="body">
       <div class="flex flex-col items-center p-5 py-12 w-full px-16">
-        <div
-          class="text-4xl font-bold text-center whitespace-nowrap text-gray-950"
-        >
+        <div class="text-4xl font-bold text-center text-gray-950">
           P.H Paribahan
         </div>
         <div
-          class="mt-11 text-lg leading-8 text-center text-gray-950 text-opacity-60 w-[736px] max-md:mt-10 max-md:max-w-full"
+          class="mt-11 text-lg leading-8 text-center text-gray-950 w-[736px]"
         >
           Yes, you can run unit tests and view the results directly within the
           app. The integrated testing features allow for a streamlined .
         </div>
         <div
-          class="flex gap-5 justify-between items-center mt-14 bg-white rounded-3xl w-full"
+          class="flex gap-2 justify-between items-center mt-14 bg-white rounded-3xl w-full"
         >
-          <div class="w-[70%] p-8">
+          <div class="w-full p-8">
             <div class="flex flex-col">
               <div class="flex gap-5 justify-between w-full">
                 <div class="flex gap-4 justify-between">
-                  <img
-                    loading="lazy"
-                    src="https://cdn.builder.io/api/v1/image/assets/TEMP/f63262af4058ef204fefda4200d800f6b9b31e3c4806bcc9221abceef60f45ca?"
-                    class="my-auto w-[69px]"
-                  />
+                  <img src="./images/bus-logo.png" class="my-auto w-[69px]" />
                   <div class="flex flex-col">
                     <div class="text-3xl font-bold text-center text-gray-950">
                       Greenline Paribahan
@@ -179,34 +173,28 @@
                   </div>
                 </div>
                 <div
-                  class="flex gap-2 self-start px-4 py-3.5 text-lg font-medium text-lime-600 whitespace-nowrap rounded-xl bg-lime-600 bg-opacity-10"
+                  class="flex items-center gap-2 px-4 py-3.5 text-lg font-medium text-lime-600 rounded-xl bg-lime-600 bg-opacity-10"
                 >
-                  <img
-                    loading="lazy"
-                    src="https://cdn.builder.io/api/v1/image/assets/TEMP/59806a5340b5c580f14feddfa70256543d23e736a002f8d15c7cbb2ab3a2dfa5?"
-                    class="w-7 aspect-square"
-                  />
+                  <img src="./images/seat-green.png" class="w-7 h-7" />
 
-                  <div class="grow my-auto">
+                  <div class="my-auto">
                     <span id="total-seats"> </span> Seats left
                   </div>
                 </div>
               </div>
               <div
-                class="flex flex-col px-8 py-9 mt-7 text-lg rounded-3xl bg-stone-50 max-md:px-5 max-md:max-w-full"
+                class="flex flex-col px-8 py-9 mt-7 text-lg rounded-3xl bg-stone-50"
               >
                 <div
                   class="flex gap-5 justify-between py-5 border-b-2 border-dashed border-gray-300"
                 >
-                  <div class="text-gray-950 text-opacity-60">Route</div>
+                  <div class="text-gray-950">Route</div>
                   <div class="text-gray-950 font-medium">Dhaka - Sylhet</div>
                 </div>
                 <div
                   class="flex gap-5 justify-between py-5 border-b-2 border-dashed border-gray-300"
                 >
-                  <div class="text-gray-950 text-opacity-60">
-                    Departure Time
-                  </div>
+                  <div class="text-gray-950">Departure Time</div>
                   <div class="text-gray-950 font-medium">9:00 PM</div>
                 </div>
 
@@ -232,16 +220,12 @@
               </div>
             </div>
           </div>
-          <div class="flex w-[30%] h-full items-center justify-center">
-            <img loading="lazy" src="info-devider.png" class="w-20 h-full" />
+          <div class="flex w-[35%] h-full items-center justify-center">
+            <img src="info-devider.png" class="w-20 h-full" />
             <div
               class="flex flex-col text-3xl font-bold leading-10 text-center text-gray-950 h-full"
             >
-              <img
-                loading="lazy"
-                src="https://cdn.builder.io/api/v1/image/assets/TEMP/9cb3240fec128189249db517b62ceae8ce262b0b97c304f6fe67de124b490a88?"
-                class="self-center w-12 aspect-square"
-              />
+              <img src="./images/fare.png" class="w-12 mx-auto" />
               <div class="mt-8">
                 550 Taka
                 <br />
@@ -264,57 +248,36 @@
           <div class="text-2xl font-semibold text-gray-950">
             Select Your Seat
           </div>
-          <div
-            class="shrink-0 mt-7 h-px bg-gray-950 bg-opacity-20 max-md:max-w-full"
-          ></div>
-          <div
-            class="flex gap-5 justify-between px-0.5 mt-4 w-full whitespace-nowrap max-md:flex-wrap max-md:max-w-full"
-          >
-            <div
-              class="flex gap-2 justify-between text-gray-950 text-opacity-50"
-            >
-              <img
-                loading="lazy"
-                src="https://cdn.builder.io/api/v1/image/assets/TEMP/7a63750c808ddf6fe35f74a844cd3ac85f4e00bfe4067f2753d45ea3f2fc3b52?"
-                class="w-7 aspect-square"
-              />
-              <div class="grow my-auto">Available</div>
+          <div class="mt-7 h-px bg-gray-950 bg-opacity-20"></div>
+          <div class="flex gap-5 justify-between px-0.5 mt-4 w-full">
+            <div class="flex gap-2 justify-between text-gray-950">
+              <img src="./images/seat-gray.png" class="w-7" />
+              <div class="my-auto">Available</div>
             </div>
             <div class="flex gap-2 justify-between text-lime-600">
-              <img
-                loading="lazy"
-                src="https://cdn.builder.io/api/v1/image/assets/TEMP/6a005dd5fcfce79532d0129a869cf55181a1fbcc7949c57b483cccbccd0994ad?"
-                class="w-7 aspect-square"
-              />
-              <div class="grow my-auto">Selected</div>
+              <img src="./images/seat-green-filled.png" class="w-7" />
+              <div class="my-auto">Selected</div>
             </div>
           </div>
-          <div
-            class="shrink-0 mt-4 h-px bg-gray-950 bg-opacity-20 max-md:max-w-full"
-          ></div>
-          <img
-            loading="lazy"
-            src="https://cdn.builder.io/api/v1/image/assets/TEMP/e1559321014600162f5f7c8ea1a7a909234243ba10c0d12c3431ae72e8d639f0?"
-            class="self-end mt-6 max-w-full aspect-[1.96] w-[110px]"
-          />
+          <div class="mt-4 h-px bg-gray-950 bg-opacity-20"></div>
+          <div class="flex justify-end">
+            <img src="./images/Group56.png" class="mt-6 w-[110px]" />
+          </div>
+
           <div class="" id="seats"></div>
         </div>
 
         <div class="flex flex-col mt-1 w-[35%]">
-          <div class="text-2xl font-semibold text-gray-950 max-md:max-w-full">
+          <div class="text-2xl font-semibold text-gray-950">
             Select Your Seat
           </div>
-          <div
-            class="shrink-0 mt-7 h-px bg-gray-950 bg-opacity-20 max-md:max-w-full"
-          ></div>
-          <div
-            class="flex flex-col px-8 py-9 mt-6 rounded-xl bg-stone-50 max-md:px-5 max-md:max-w-full"
-          >
+          <div class="mt-7 h-px bg-gray-950 bg-opacity-20"></div>
+          <div class="flex flex-col px-8 py-9 mt-6 rounded-xl bg-stone-50">
             <div
-              class="flex gap-5 justify-between w-full text-base font-medium whitespace-nowrap text-gray-950"
+              class="flex gap-5 justify-between w-full text-base font-medium text-gray-950"
             >
               <div class="flex gap-1.5 justify-between items-center">
-                <div class="grow">Seat</div>
+                <div class="">Seat</div>
 
                 <p
                   class="bg-green-500 text-white px-3 py-0.5 rounded-sm text-xs leading-4"
@@ -322,16 +285,16 @@
                 >
                   0
                 </p>
-                <div class="grow">Class</div>
+                <div class="">Class</div>
               </div>
               <div>Price</div>
             </div>
-            <div class="shrink-0 mt-5 h-px bg-gray-950 bg-opacity-20"></div>
+            <div class="mt-5 h-px bg-gray-950 bg-opacity-20"></div>
             <div
               class="px-0.5 mt-5 space-y-3 text-gray-700"
               id="selected-seats"
             ></div>
-            <div class="shrink-0 mt-4 h-px bg-gray-950 bg-opacity-20"></div>
+            <div class="mt-4 h-px bg-gray-950 bg-opacity-20"></div>
             <div
               class="flex gap-5 justify-between mt-5 text-base font-medium text-gray-950"
             >
@@ -352,7 +315,7 @@
                 id="cupon"
               />
               <button
-                class="justify-center px-5 py-3.5 text-base font-semibold text-white whitespace-nowrap bg-lime-600 rounded-lg"
+                class="justify-center px-5 py-3.5 text-base font-semibold text-white bg-lime-600 rounded-lg"
                 id="apply"
               >
                 Apply
@@ -370,14 +333,12 @@
           </div>
 
           <button
-            class="justify-center items-center px-16 py-5 mt-6 text-xl font-extrabold text-center text-white whitespace-nowrap bg-lime-600 rounded-2xl max-md:px-5 max-md:max-w-full"
+            class="justify-center items-center px-16 py-5 mt-6 text-xl font-extrabold text-center text-white bg-lime-600 rounded-2xl"
             id="next"
           >
             Next
           </button>
-          <div
-            class="flex gap-5 justify-between self-center mt-7 text-base text-gray-950 text-opacity-60"
-          >
+          <div class="flex gap-5 justify-between mt-7 text-base text-gray-950">
             <div class="flex-auto underline">Terms and Conditions</div>
             <div class="flex-auto underline">Cancellation Policy</div>
           </div>
@@ -391,17 +352,9 @@
         <div
           class="flex flex-col items-center px-20 py-12 text-center bg-white rounded-2xl max-w-[718px] mx-auto my-auto"
         >
-          <img
-            loading="lazy"
-            src="https://cdn.builder.io/api/v1/image/assets/TEMP/1017994f642db8585cf1f68376afe20fd9e1483ce4d5188cc1f8309123d2516d?"
-            class="mt-2 max-w-full aspect-[1.02] w-[100px]"
-          />
-          <div class="mt-11 text-2xl font-bold text-green-500 max-md:mt-10">
-            SUCCESS
-          </div>
-          <div
-            class="self-stretch mt-12 text-xl font-medium leading-8 text-neutral-600 max-md:mt-10 max-md:mr-0.5 max-md:max-w-full"
-          >
+          <img src="./images/success.png" class="mt-2 max-w-full w-[100px]" />
+          <div class="mt-11 text-2xl font-bold text-green-500">SUCCESS</div>
+          <div class="mt-12 text-xl font-medium leading-8 text-neutral-600">
             Thank you for Booking Our Bus Seats.
             <br />
             We are working hard to find the best service and deals for you.
